# Hi3861-Car

./: README.md
3.0-lts/src/: ohos_config.json
3.0-lts/src/prebuilts/build-tools/common/restool/: BUILD.gn  NOTICE.txt
3.0-lts/src/prebuilts/python/linux-x86/3.8.5/include/python3.8/: pyconfig.h
3.0-lts/src/prebuilts/python/linux-x86/3.8.5/lib/pkgconfig/: python-3.8-embed.pc  python-3.8.pc
3.0-lts/src/prebuilts/python/linux-x86/3.8.5/lib/python3.8/: _sysconfigdata__linux_x86_64-linux-gnu.py
3.0-lts/src/prebuilts/python/linux-x86/3.8.5/lib/python3.8/config-3.8-x86_64-linux-gnu/: Makefile  python-config.py
