# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_executable("restool_linux") {
  source = "./restool"
  subsystem_name = "global"
  part_name = "restool"
  license_file = "./NOTICE.txt"
}
ohos_prebuilt_executable("restool_windows") {
  source = "win-x86/restool.exe"
  subsystem_name = "global"
  part_name = "restool"
  license_file = "./NOTICE.txt"
}
ohos_prebuilt_executable("restool_darwin") {
  source = "darwin-x86/restool"
  subsystem_name = "global"
  part_name = "restool"
  license_file = "./NOTICE.txt"
}
ohos_prebuilt_etc("restool_config") {
  source = "//prebuilts/build-tools/common/restool/config_agp_attribute_constants.xml"
  subsystem_name = "global"
  part_name = "restool"
}
ohos_prebuilt_etc("restool_systemres") {
  source =
      "//utils/resources/systemres/main/resources/base/element/id_defined.json"
  subsystem_name = "global"
  part_name = "restool"
}
ohos_prebuilt_etc("restool_attrs") {
  source = "//prebuilts/build-tools/common/restool/attrs.xml"
  subsystem_name = "global"
  part_name = "restool"
}
